Fixed jwt token nonsense